--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -97,7 +97,7 @@
 				.icon.help { background-image: url('~img/icon/help/dark0.svg'); }
 				.icon.help:hover { background-image: url('~img/icon/help/dark0.svg'); }
 
-				.icon.nav { background-image: url('~img/icon/nav1.svg'); }
+				.icon.nav { background-image: url('~img/icon/header/nav1.svg'); }
 		
 				img.full { width: 100%; }
 				img.mention { margin-left: -18px; }
