--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -44,6 +44,9 @@
 	.icon.forward { background-image: url('~img/icon/header/back0.svg'); }
 	.icon.forward:hover { background-image: url('~img/icon/header/back1.svg'); }
 
+	.icon.nav { background-image: url('~img/icon/header/nav0.svg'); }
+	.icon.nav:hover { background-image: url('~img/icon/header/nav1.svg'); }
+
 	.icon.plus { background-size: 16px 16px !important; background-image: url('~img/icon/header/plus0.svg'); }
 	.icon.plus:hover { background-image: url('~img/icon/header/plus1.svg'); }
 	.icon.plus.dis:hover { background-image: url('~img/icon/header/plus0.svg'); }
@@ -58,26 +61,28 @@
 .headerMainEditSearch {
 	.mid { height: 28px; position: absolute; left: 50%; transform: translateX(-50%); top: 5px; white-space: nowrap; }
 	.mid {
-		.btn { 
-			border: 1px solid $colorLightGrey; border-radius: 6px; vertical-align: top; height: 28px; 
-			width: 32px; background-size: 20px 20px; margin-right: 8px; opacity: 0;
-		}
-	
-		.btn.home { width: 48px; margin-right: 8px; }
-		.btn.back { margin-right: 2px; }
-		.btn.plus { width: 122px; margin: 0px; }
+		.icon { margin: 4px 0px 0px 0px; opacity: 0; }
+		.icon.nav { margin-right: 16px; }
+		.icon.plus { margin-left: 16px; }
 	}
 
 	.path { 
 		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px;
-		line-height: 24px; width: 400px; margin-right: 8px; text-align: center; transition: $transitionFast;
+		line-height: 24px; width: 400px; text-align: center; transition: $transitionFast;
 	}
 	.path {
 		.item { line-height: 20px; vertical-align: middle; }
 	}
 
-	.right { position: absolute; top: 9px; right: 10px; }
-	.right {
+	.side { position: absolute; top: 9px; }
+	.side.left { left: 9px; opacity: 0; transition: $transitionFast; }
+	.side.left {
+		.icon.home { margin-right: 16px; }
+		.icon.back { margin-right: 12px; }
+	}
+
+	.side.right { position: absolute; top: 9px; right: 9px; }
+	.side.right {
 		.icon.more { width: 20px; height: 20px; background-image: url('~img/icon/menu/action/more0.svg'); cursor: pointer; }
 		.icon.more:hover { background-image: url('~img/icon/menu/action/more1.svg'); }
 
@@ -85,10 +90,17 @@
 	}
 }
 
+body.platformMac {
+	.headerMainEditSearch {
+		.side.left { left: 90px; }
+	}
+}
+
 .headerMainEditSearch:hover, .headerMainEditSearch.active {
+	.side.left { opacity: 1; }
 	.mid {
-		.btn { opacity: 1; }
-		.btn.dis { opacity: 0.5; }
+		.icon { opacity: 1; }
+		.icon.dis { opacity: 0.5; }
 	}
 	.path { border-color: $colorLightGrey; }
 }
