--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -116,6 +116,7 @@
 				.buttons { margin-top: 16px; display: flex; }
 				.buttons {
 					.button { width: 100%; height: 32px; line-height: 30px; }
+					.button:first-child { margin-right: 8px; }
 					.button {
 						.icon.expand { background-image: url('~img/icon/expand.svg'); width: 20px; height: 20px; position: absolute; left: 8px; top: 6px; }
 					}
