--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -64,6 +64,15 @@
 		.icon { margin: 4px 0px 0px 0px; opacity: 0; }
 		.icon.nav { margin-right: 16px; }
 		.icon.plus { margin-left: 16px; }
+		.icon.plus {
+			.arrow { 
+				width: 8px; height: 8px; background-image: url('~img/icon/header/arrow0.svg'); position: absolute; right: -12px;
+				top: 6px; margin: 0px;
+			}
+		}
+		.icon.plus:hover {
+			.arrow { background-image: url('~img/icon/header/arrow1.svg'); }
+		}
 	}
 
 	.path { 
