--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -2,7 +2,7 @@
 
 .blocks {
 	.block.blockDataview {
-        .viewItem.viewGrid { border-collapse: collapse; min-width: 100%; border-bottom: 1px solid #e0ded2; }
+        .viewItem.viewGrid { border-collapse: collapse; border-bottom: 1px solid #e0ded2; }
 		.viewItem.viewGrid {
 			.head { 
 				text-align: left; color: #6c6a5f; padding: 14px 0px 14px 14px; border-bottom: 1px solid #e0ded2; white-space: nowrap; 
