--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -74,7 +74,7 @@
 .editorWrapper.isProfile.withIcon { padding-top: 56px; }
 .editorWrapper.isProfile.withIconAndCover { padding-top: 190px; }
 
-.editorWrapper.isDataview { width: 1088px; }
+.editorWrapper.isDataview { width: calc(100% - 192px); }
 .editorWrapper.isDataview {
 	.blocks { margin-left: 0px; }
 	.blocks {
