--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -10,6 +10,7 @@
 		transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out;
 	}
 	.menu.show { opacity: 1; transform: scale3d(1,1,1); }
+	.menu * { user-select: none; }
 	
 	.menu.v1.h3 { transform-origin: 0% 100%; } /* left top */
 	.menu.v2.h3 { transform-origin: 0% 0%; } /* left bottom */
@@ -25,6 +26,7 @@
 	
 	.menu {
 		.content { opacity: 0; transition: opacity 0.05s ease-in-out; transition-delay: 0.05s; }
+		.input { user-select: text; }
 	}
 	.menu.show {
 		.content { opacity: 1; }
