--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -6,7 +6,10 @@
 		.item { padding: 4px 40px 4px 10px; line-height: 28px; position: relative; white-space: nowrap; }
 		.item {
 			.icon.dnd { vertical-align: top; margin-top: 4px; }
-			.input { flex-shrink: 2; border-radius: 4px; border: solid 1px #d2d0c2; padding: 0px 6px; height: 28px; width: 160px; }
+			.input { 
+				flex-shrink: 2; border-radius: 4px; border: solid 1px #d2d0c2; padding: 0px 6px; height: 28px; width: 160px; 
+				user-select: text;
+			}
 
 			.icon.checkbox { width: 24px; height: 24px; margin-top: 3px; background-image: url('~img/icon/dataview/checkbox0.svg'); }
 			.icon.checkbox.active { background-image: url('~img/icon/dataview/checkbox1.svg'); }
