--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -35,24 +35,12 @@
 		.icon:last-child { margin: 0px; }
 	}
 	
-	.icon.home { background-image: url('~img/icon/header/home0.svg'); }
-	.icon.home:hover { background-image: url('~img/icon/header/home1.svg'); }
-
-	.icon.back { background-image: url('~img/icon/header/back0.svg'); }
-	.icon.back:hover { background-image: url('~img/icon/header/back1.svg'); }
-
-	.icon.forward { background-image: url('~img/icon/header/back0.svg'); }
-	.icon.forward:hover { background-image: url('~img/icon/header/back1.svg'); }
-
-	.icon.nav { background-image: url('~img/icon/header/nav0.svg'); }
-	.icon.nav:hover { background-image: url('~img/icon/header/nav1.svg'); }
-
-	.icon.plus { background-size: 16px 16px !important; background-image: url('~img/icon/header/plus0.svg'); }
-	.icon.plus:hover { background-image: url('~img/icon/header/plus1.svg'); }
-	.icon.plus.dis:hover { background-image: url('~img/icon/header/plus0.svg'); }
-
-	.icon.more { background-image: url('~img/icon/menu/action/more0.svg'); }
-	.icon.more:hover { background-image: url('~img/icon/menu/action/more1.svg'); }
+	.icon.home { background-image: url('~img/icon/header/home.svg'); }
+	.icon.back { background-image: url('~img/icon/header/back.svg'); }
+	.icon.forward { background-image: url('~img/icon/header/back.svg'); }
+	.icon.nav { background-image: url('~img/icon/header/nav.svg'); }
+	.icon.plus { background-image: url('~img/icon/header/plus.svg'); }
+	.icon.more { background-image: url('~img/icon/header/more.svg'); }
 }
 
 .headerMainEdit { background: #fff; padding: 9px 10px 9px 82px; line-height: 20px; }
@@ -67,17 +55,14 @@
 		.icon { margin: 0px; opacity: 0; }
 		.icon.plus {
 			.arrow { 
-				width: 8px; height: 8px; background-image: url('~img/icon/header/arrow0.svg'); position: absolute; right: -12px;
+				width: 8px; height: 8px; background-image: url('~img/icon/header/arrow.svg'); position: absolute; right: -12px;
 				top: 10px; margin: 0px; background-color: none !important; background-size: 100% 100%;
 			}
-		}
-		.icon.plus:hover {
-			.arrow { background-image: url('~img/icon/header/arrow1.svg'); }
 		}
 	}
 
 	.path { 
-		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px; margin: 0px 16px;
+		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px; margin: 0px 6px;
 		line-height: 24px; width: 400px; text-align: center; transition: $transitionFast; -webkit-app-region: no-drag;
 	}
 	.path {
@@ -86,13 +71,13 @@
 	.path * { pointer-events: all; }
 
 	.side { position: absolute; top: 5px; }
-	.side.left { left: 9px; opacity: 0; transition: $transitionFast; }
+	.side.left { left: 6px; opacity: 0; transition: $transitionFast; }
 	.side.left {
 		.icon { margin: 0px; }
 		.icon.back, .icon.forward { width: 32px; }
 	}
 
-	.side.right { position: absolute; top: 5px; right: 9px; }
+	.side.right { position: absolute; top: 5px; right: 6px; }
 	.side.right {
 		.icon { margin: 0px; }
 	}
