--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -34,6 +34,7 @@ input, textarea, select { font-family: 'Inter'; }
 .txt { vertical-align: middle; display: inline-block; line-height: 1; }
 .flex { display: flex; }
 .cp { cursor: pointer; }
+.nw { white-space: nowrap; }
 .through { pointer-events: none; }
 .rel { position: relative; }
 .disabled { opacity: 0.5 !important; cursor: default !important; }
