--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -7,7 +7,7 @@
 		.value { -webkit-user-modify: read-write-plaintext-only; width: 100%; overflow: hidden; }
 		.placeHolder { 
 			color: $colorDarkGrey; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; overflow: hidden; 
-			width: 100%; height: 100%; cursor: text; 
+			width: 100%; height: 100%; cursor: text; pointer-events: none;
 		}
 		
 		lnk { cursor: pointer; color: inherit; border-bottom: 1px solid $colorDarkGrey; text-decoration: none; }
