--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -43,7 +43,7 @@
 			td.cell.isName { width: 288px; }
 			td.cell.isName {
 				.icon.expand { 
-					display: block; position: absolute; right: 0px; top: 0px; opacity: 0; width: 38px; height: 100%;
+					display: block; position: absolute; right: 2px; top: 2px; opacity: 0; width: 38px; height: calc(100% - 4px);
 					background-size: 20px 20px; background-position: 9px center; background-color: #fff;
 				}
 				.name { line-height: 20px; width: calc(100% - 48px); @include text-overflow-nw; max-width: 240px; }
@@ -59,6 +59,9 @@
             }
 			td.cell.isEditing.c-description { padding: 0px !important; box-shadow: 0px 0px; }
 			td.cell.isEditing .cellContent { height: auto; }
+			td.cell.isEditing .cellContent {
+				.name { display: inline-block; }
+			}
             
 			tr.active {
 				td.cell.isName {
