--- a/src/scss/popup/confirm.scss
+++ b/src/scss/popup/confirm.scss
@@ -2,9 +2,15 @@
 
 .popups {
 	.popup.popupConfirm {
-		.innerWrap { width: 448px; padding: 16px; }
-		.label { margin-bottom: 16px; }
+		.innerWrap { width: 672px; padding: 32px 48px 48px 48px; }
+		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.48px; margin-bottom: 16px; }
+		.label { margin-bottom: 26px; }
 		.button { height: 32px; line-height: 32px; margin-right: 10px; }
 		.button.last-child { margin: 0px; }
+
+		.smile { margin-bottom: 12px; }
+
+		.icon { width: 32px; height: 32px; }
+		.icon.update { background-image: url('~img/icon/update.svg'); }
 	}	
 }
