--- a/src/scss/popup/help.scss
+++ b/src/scss/popup/help.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .popups {
-	.popup.popupNew {
+	.popup.popupHelp {
 		.innerWrap { width: 864px; padding: 80px 0px 0px 0px; }
 
 		.head { display: flex; position: absolute; top: 0px; left: 0px; width: 100%; padding: 10px 20px; color: $colorDarkGrey; }
