--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -20,26 +20,6 @@
 			}
 		}
 
-		.path { padding:  12px 14px 0px 14px; white-space: nowrap; }
-		.path {
-			.item { display: inline-block; vertical-align: top; color: #6c6a5f; margin-right: 6px; cursor: pointer; transition: color 0.2s ease-in-out; }
-			.item {
-				.icon { margin-right: 4px; }
-				.icon.arrow { margin: -4px 0px 0px 0px; width: 6px; height: 10px; background-image: url('~img/arrow/path.svg'); vertical-align: middle; }
-				.smile { margin-right: 4px; }
-				.name { display: inline-block; vertical-align: top; margin-right: 6px; line-height: 20px; }
-				.icon.search { width: 20px; height: 20px; vertical-align: top; }
-				.icon.home { width: 20px; height: 20px; vertical-align: top; }
-				
-			}
-			.item:last-child { margin: 0px; }
-			.item:last-child {
-				.icon.arrow { display: none; }
-				.name { margin: 0px; }
-			}
-			.item:hover, { color: $colorBlack; }
-		}
-		
 		.empty { height: 100%; line-height: 360px; padding: 16px; text-align: center; }
 		.empty {
 			b { display: block; font-weight: 400; color: $colorBlack; }
@@ -58,8 +38,8 @@
 				.descr { width: 100%; @include text-small; max-height: 18px; @include text-overflow-nw; color: #6c6a5f; }
 			}
 
-			.item:hover, .item.active { background-color: rgba(172, 169, 150, 0.15); }
-			.item:hover, .item.active {
+			.item.active { background-color: rgba(172, 169, 150, 0.15); }
+			.item.active {
 				.smile { background-color: $colorLightGrey; }
 			}
 		}
@@ -82,10 +62,8 @@
 					}
 				}
 
-				.item:hover, .item.active { 
-					background: none; border-color: $colorOrange !important; box-shadow: 0px 0px 0px 1px $colorOrange; 
-				}
-				.item:hover, .item.active {
+				.item.active { background: none; border-color: $colorOrange !important; box-shadow: 0px 0px 0px 1px $colorOrange; }
+				.item.active {
 					.icon.arrow { background-image: url('~img/arrow/nav1.svg'); }
 					.smile { background: #f7f5f0; }
 				}
@@ -93,10 +71,6 @@
 				.item.empty { line-height: 78px; cursor: default; }
 				.item.empty {
 					.name { display: inline-block; vertical-align: middle; color: $colorDarkGrey; }
-				}
-				.item.empty:hover { border-color: $colorLightGrey !important; box-shadow: 0px 0px; }
-				.item.empty:hover {
-					.icon.arrow { background-image: url('~img/arrow/nav0.svg'); }
 				}
 			}
 
