--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -5,8 +5,8 @@
         .viewItem.viewGrid { border-collapse: collapse; border-bottom: 1px solid #e0ded2; table-layout: fixed; }
 		.viewItem.viewGrid {
 			.head { 
-				text-align: left; color: #6c6a5f; padding: 14px 0px 14px 14px; border-bottom: 1px solid #e0ded2; white-space: nowrap; 
-				font-weight: 400; line-height: 20px; position: relative;
+				text-align: left; color: #6c6a5f; padding: 14px; border-bottom: 1px solid #e0ded2; white-space: nowrap; 
+				font-weight: 400; line-height: 20px; position: relative; @include text-overflow-nw;
 			}
 			.head {
 				.icon { width: 20px; height: 20px; margin: 0px 4px 0px 0px; vertical-align: top; }
@@ -50,7 +50,7 @@
 					display: block; position: absolute; right: 2px; top: 2px; opacity: 0; width: 38px; height: calc(100% - 4px);
 					background-size: 20px 20px; background-position: 9px center; background-color: #fff;
 				}
-				.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 48px); }
+				.name { line-height: 20px; @include text-overflow-nw; width: calc(100% - 24px); }
 			}
 
             td.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; }
