#13 block menu localization and refactoring

--- a/src/scss/component/inputWithFile.scss
+++ b/src/scss/component/inputWithFile.scss
@@ -2,7 +2,7 @@
 
 .inputWithFile {
 	line-height: 20px; padding: 11px 13px; border-radius: 6px; border: solid 1px $colorLightGrey; color: $colorDarkGrey;
-	transition: background 0.05s ease-in-out; white-space: nowrap; overflow: hidden; font-size: 14px;
+	transition: background 0.05s ease-in-out; white-space: nowrap; overflow: hidden; @include text-common;
 }
 .inputWithFile {
 	.txt { line-height: 20px; height: 20px; overflow: hidden; width: calc(100% - 26px); vertical-align: top; }
