--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -38,6 +38,7 @@ input, textarea, select { font-family: 'Inter'; }
 .through { pointer-events: none; }
 .rel { position: relative; }
 .disabled { opacity: 0.5 !important; cursor: default !important; }
+.readOnly { -webkit-user-modify: read-only !important; }
 
 .fileWrap { position: relative; overflow: hidden; cursor: pointer; }
 .fileWrap { 
