--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -47,6 +47,8 @@
 	}
 
 	.block > .wrapContent > .children > .block.last { margin: 0px; }
+
+	.block.isReadOnly > .wrapMenu > .icon.dnd { display: none; }
 	
 	.block.align0 > .wrapContent { text-align: left; }
 	.block.align1 > .wrapContent { text-align: center; }
