--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -6,8 +6,8 @@
 	.icon.back { margin-right: 8px; }
 	
 	.icon.logo {
-		width: 60px; height: 13px; position: absolute; left: 50%; margin-left: -30px; top: 13px; background: url('~img/logo.svg') no-repeat;
-		background-position: center center;
+		width: 60px !important; height: 13px !important; position: absolute; left: 50%; margin-left: -30px; top: 13px; background: url('~img/logo.svg') no-repeat;
+		background-position: center center; background-size: 100% 100% !important;
 	}
 
 	.path { white-space: nowrap; }
@@ -51,27 +51,16 @@
 	}
 }
 
-.headerMainIndex { height: 38px; background: rgba(44,43,39,0.1); }
-.headerMainIndex {
+.header.headerMainIndex { height: 38px; background: rgba(44,43,39,0.1); }
+.header.headerMainIndex {
 	.icon { width: 40px; height: 28px; background-size: 20px 20px; border-radius: 6px; }
 	.icon:hover { background-color: rgba(0,0,0,0.15); }
 }
 
-.headerMainEdit { background: #fff; padding: 5px 10px; height: 38px; line-height: 20px; }
-.headerMainEdit {
+.header.headerMainEdit { background: #fff; padding: 5px 10px; height: 38px; line-height: 20px; }
+.header.headerMainEdit {
 	.icon { width: 40px; height: 28px; background-size: 20px 20px; border-radius: 6px; }
 	.icon:hover { background-color: #f3f2ec; }
-
-	.mid { width: 492px; height: 28px; position: absolute; left: 50%; margin-left: -246px; top: 5px; white-space: nowrap; }
-	.mid {
-		.icon { margin: 0px; opacity: 0; }
-		.icon.plus {
-			.arrow { 
-				width: 8px; height: 8px; background-image: url('~img/icon/header/arrow.svg'); position: absolute; right: -12px;
-				top: 10px; margin: 0px; background-color: none !important; background-size: 100% 100%;
-			}
-		}
-	}
 
 	.path { 
 		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px; margin: 0px 6px;
@@ -88,17 +77,30 @@
 		.icon { margin: 0px; }
 		.icon.back, .icon.forward { width: 32px; }
 	}
+
+	.side.center { width: 492px; height: 28px; position: absolute; left: 50%; margin-left: -246px; top: 5px; white-space: nowrap; }
+	.side.center {
+		.icon { margin: 0px; opacity: 0; }
+		.icon.plus {
+			.arrow { 
+				width: 8px; height: 8px; background-image: url('~img/icon/header/arrow.svg'); position: absolute; right: -12px;
+				top: 10px; margin: 0px; background-color: none !important; background-size: 100% 100%;
+			}
+		}
+	}
 }
 
+.header.headerMainHistory { width: calc(100% - 254px); background: #fff; }
+
 body.platformMac {
-	.headerMainEdit {
+	.header.headerMainEdit, .header.headerMainHistory {
 		.side.left { left: 90px; }
 	}
 }
 
-.headerMainEdit:hover, .headerMainEdit.active {
+.header.headerMainEdit:hover, .header.headerMainEdit.active {
 	.side.left { opacity: 1; }
-	.mid {
+	.side.center {
 		.icon { opacity: 1; }
 		.icon.dis { opacity: 0.5; }
 	}
