#599: several design and logic fixes

--- a/src/scss/page/main/history.scss
+++ b/src/scss/page/main/history.scss
@@ -4,7 +4,7 @@
 	.wrapper { padding: 38px 0px 0px 0px; width: calc(100% - 254px); }
 	.wrapper > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
 
-	.panel { width: 254px; background: #fff; border-left: 1px solid #dfddd0; }
+	.panel { width: 254px; border-left: 1px solid #dfddd0; }
 
 	.blockLast { height: 100px; }
 }
