--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -45,7 +45,13 @@
 	.icon.add { background-image: url('~img/icon/header/add.svg'); }
 	.icon.settings { background-image: url('~img/icon/header/settings.svg'); }
 
-	.side.right { position: absolute; top: 5px; right: 6px; }
+	.side { position: absolute; top: 5px; height: 28px; line-height: 28px; }
+
+	.side.left { left: 6px; }
+
+	.side.center { width: 492px; height: 28px; left: 50%; margin-left: -246px; white-space: nowrap; }
+
+	.side.right { right: 6px; }
 	.side.right {
 		.icon { margin: 0px; }
 	}
@@ -71,14 +77,12 @@
 	}
 	.path * { pointer-events: all; }
 
-	.side { position: absolute; top: 5px; }
-	.side.left { left: 6px; opacity: 0; transition: $transitionFast; }
+	.side.left { opacity: 0; transition: $transitionFast; }
 	.side.left {
 		.icon { margin: 0px; }
 		.icon.back, .icon.forward { width: 32px; }
 	}
 
-	.side.center { width: 492px; height: 28px; position: absolute; left: 50%; margin-left: -246px; top: 5px; white-space: nowrap; }
 	.side.center {
 		.icon { margin: 0px; opacity: 0; }
 		.icon.plus {
@@ -90,11 +94,35 @@
 	}
 }
 
-.header.headerMainHistory { width: calc(100% - 254px); background: #fff; }
+.header.headerMainHistory { height: 38px; line-height: 22px; padding: 8px 16px; width: calc(100% - 254px); background: #fff; }
+.header.headerMainHistory {
+	.side { height: 20px; top: 8px; }
+	.side.center { text-align: center; }
+	.side.right { right: 16px; }
+
+	.side {
+		.item { color: #6c6a5f; transition: $transitionFast; cursor: pointer; height: 20px; line-height: 20px; }
+		.item {
+			.icon.arrow { background-image: url('~img/arrow/history0.svg'); margin: 0px; }
+		}
+		.item.orange { color: #e89d00; font-weight: 500; }
+		
+		.item.grey:hover { color: $colorBlack; }
+		.item.orange:hover { color: $colorBlack; }
+
+		.item:hover {
+			.icon.arrow { background-image: url('~img/arrow/history1.svg'); }
+		}
+	}
+}
 
 body.platformMac {
-	.header.headerMainEdit, .header.headerMainHistory {
+	.header {
 		.side.left { left: 90px; }
+	}
+
+	.header.headerMainHistory {
+		.side.left { left: 80px; }
 	}
 }
 
