--- a/src/scss/page/main/history.scss
+++ b/src/scss/page/main/history.scss
@@ -1,12 +1,13 @@
 @import "~scss/_vars";
 
 .pageMainHistory {
-	.wrapper { padding: 38px 0px 0px 0px; width: calc(100% - 254px); }
-	.wrapper > .loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
+	#body { overflow: hidden; }
+	.wrapper { padding: 38px 0px 0px 0px; width: calc(100% - 254px); overflow: auto; }
+	.loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
 
 	.block.blockCover { width: calc(100% - 254px - 48px); }
 
-	.list { width: 254px; border-left: 1px solid #dfddd0; position: relative; z-index: 10; background: #fff; }
+	.list { width: 254px; border-left: 1px solid #dfddd0; position: relative; z-index: 10; background: #fff; overflow: auto; }
 	.list {
 		.section { padding: 11px 16px; }
 		.section {
