--- a/src/scss/block/media.scss
+++ b/src/scss/block/media.scss
@@ -30,6 +30,9 @@
 		.icon.play:hover { background-color: rgba(255,255,255,0.9); }
 	}
 	.block.blockMedia > .wrapContent > .selectable > .dropTarget { line-height: 0px; }
+
+	.block.blockMedia.isReadOnly > .wrapContent > .selectable > .dropTarget .icon.resize { display: none; }
+	.block.blockMedia.isReadOnly > .wrapContent > .selectable > .dropTarget .icon.play { display: none; }
 	
 	.block.blockMedia:hover {
 		.icon.resize { opacity: 1; }
