--- a/src/scss/component/inputWithFile.scss
+++ b/src/scss/component/inputWithFile.scss
@@ -7,8 +7,8 @@
 .inputWithFile {
 	.txt { line-height: 20px; height: 20px; overflow: hidden; width: calc(100% - 26px); vertical-align: top; }
 	.fileWrap { display: inline-block; vertical-align: top; }
-	.fileWrap .border { border-bottom: 1px solid $colorDarkGrey; display: inline-block; line-height: 1; transition: $transitionFast; }
-	.fileWrap:hover .border { cursor: pointer; color: $colorBlack; }
+	.fileWrap .border { border-bottom: 1px solid $colorDarkGrey; display: inline-block; line-height: 1; transition: $transitionFast; cursor: pointer; }
+	.fileWrap:hover .border { color: $colorBlack; }
 
 	.input::placeholder { color: $colorDarkGrey; }
 	.urlToggle { cursor: text; display: inline-block; }
@@ -22,6 +22,12 @@
 	.icon.video { background-image: url('~img/icon/menu/action/block/video0.svg'); }
 	.icon.file { background-image: url('~img/icon/menu/action/block/file0.svg'); }
 	.icon.bookmark { background-image: url('~img/icon/menu/action/block/bookmark0.svg'); }
+}
+
+.inputWithFile.isReadOnly {
+	.urlToggle { cursor: default; }
+	.border { border: 0px; cursor: default; }
+	.fileWrap:hover .border { color: $colorDarkGrey; }
 }
 
 .inputWithFile.isSmall {
