remove auto-update timeout, fix linux scrollbar width

--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -46,7 +46,7 @@
 	}
 }
 
-body.platformWindows {
+body.platformWindows, body.platformLinux {
 	.menus {
 		.menu.menuBlockAdd { width: 377px !important; }
 	}
