--- a/src/scss/page/main/history.scss
+++ b/src/scss/page/main/history.scss
@@ -2,10 +2,8 @@
 
 .pageMainHistory {
 	#body { overflow: hidden; }
-	.wrapper { padding: 38px 0px 0px 0px; width: calc(100% - 254px); overflow: auto; }
+	.wrapper { padding: 38px 0px 0px 0px; width: calc(100% - 254px); overflow: auto; position: relative; }
 	.loaderWrapper { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; }
-
-	.block.blockCover { width: calc(100% - 254px - 48px); }
 
 	.list { width: 254px; border-left: 1px solid #dfddd0; position: relative; z-index: 10; background: #fff; overflow: auto; }
 	.list {
