--- a/src/scss/popup/shortcut.scss
+++ b/src/scss/popup/shortcut.scss
@@ -2,10 +2,10 @@
 
 .popups {
 	.popup.popupShortcut {
-		.innerWrap { width: 864px; padding: 52px 48px 0px 48px; }
-		.content { position: relative; padding-top: 20px; }
+		.innerWrap { width: 672px; padding: 52px 0px 0px 0px; }
+		.content { position: relative; padding-top: 25px; }
 
-		.head { position: absolute; top: 0px; left: 0px; width: 100%; }
+		.head { position: absolute; top: 0px; left: 0px; width: 100%; padding: 0px 48px; }
 		.head {
 			.tabs { @include text-header2; color: $colorDarkGrey; }
 			.tabs {
@@ -15,7 +15,7 @@
 			}
 		}
 
-		.body { overflow-y: auto; padding: 37px 0px 48px 0px; }
+		.body { overflow-y: auto; padding: 32px 48px 48px 48px; }
 		.body {
 			.section { margin-bottom: 25px; }
 			.section:last-child { margin-bottom: 0px; }
@@ -30,6 +30,11 @@
 					}
 				}
 			}
+
+			.section > .descr { padding-bottom: 12px; border-bottom: 1px solid #eae9e0; }
+
+			.section.separator { padding-top: 27px; margin-bottom: 41px; }
+			.section.separator > .descr { border: 0px; }
 		}
 	}
 }
