--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -7,7 +7,7 @@
 	
 	.icon.logo {
 		width: 60px; height: 13px; position: absolute; left: 50%; margin-left: -30px; top: 13px; background: url('~img/logo.svg') no-repeat;
-		background-position: center center;
+		background-position: center center; cursor: default;
 	}
 
 	.path { white-space: nowrap; }
