--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -64,6 +64,7 @@
 			}
 			.icon.delete:hover { background-image: url('~img/icon/menu/delete1.svg');  }
 			.icon.trash { width: 16px; height: 16px; background-image: url('~img/icon/menu/trash.svg'); }
+			.icon.arrow { position: absolute; right: 14px; top: 50%; margin: -10px 0px 0px 0px; background-image: url('~img/arrow/menu.svg'); }
 			
 			.smile { margin-right: 4px; }
 			.smile {
