#698: title moved to text style

--- a/src/scss/block/layout.scss
+++ b/src/scss/block/layout.scss
@@ -40,4 +40,8 @@
 	/* Div */
 	.block.blockLayout.c2 > .wrapMenu { display: none; }
 	.block.blockLayout.c2 > .wrapContent { width: 100%; overflow: visible; }
+
+	/* Header */
+	.block.blockLayout.c3 > .wrapMenu { display: none; }
+	.block.blockLayout.c3 > .wrapContent { width: 100%; overflow: visible; }
 }
