--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -80,6 +80,17 @@
 
 	.block.blockText > .wrapContent > .selectable > .dropTarget { padding: 3px 0px; }
 
+	.block.blockText.title { padding: 10px 0px 22px 0px; font-size: 36px; line-height: 40px; letter-spacing: -0.48px; font-weight: 600; }
+	.block.blockText.title {
+		.placeHolder { 
+			color: $colorDarkGrey; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; overflow: hidden; 
+			width: 100%; height: 100%; cursor: text; 
+		}
+		.value { -webkit-user-modify: read-write-plaintext-only; }
+	}
+	.block.blockText.title > .wrapContent > .selectable > .dropTarget { padding: 4px 0px 2px 0px; }
+	.block.blockText.title > .wrapMenu { visibility: hidden; }
+
 	.block.blockText.header1 { padding: 22px 0px 0px 0px; }
 	.block.blockText.header1 > .wrapContent > .selectable > .dropTarget { @include text-header1; padding: 4px 0px 2px 0px; }
 	.block.blockText.header1 > .wrapContent > .selectable > .dropTarget mention .space { width: 6px; height: 32px; }
