--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -48,10 +48,15 @@ body.platformWindows {
 		.name { color: #fff; display: inline-block; vertical-align: middle; line-height: 1; margin-top: -2px; }
 
 		.icon { cursor: pointer; -webkit-app-region: none; }
-		.icon.menu { width: 20px; height: 20px; margin-right: 16px; background-image: url('~img/icon/header/windows/menu.svg'); }
-		.icon.min { background-image: url('~img/icon/header/windows/min.svg'); }
-		.icon.max { background-image: url('~img/icon/header/windows/max.svg'); }
-		.icon.close { background-image: url('~img/icon/header/windows/close.svg'); }
+		.icon.menu { width: 20px; height: 20px; margin-right: 16px; background-image: url('~img/icon/header/windows/menu0.svg'); }
+		.icon.min { background-image: url('~img/icon/header/windows/min0.svg'); }
+		.icon.max { background-image: url('~img/icon/header/windows/max0.svg'); }
+		.icon.close { background-image: url('~img/icon/header/windows/close0.svg'); }
+
+		.icon.menu:hover { background-image: url('~img/icon/header/windows/menu1.svg'); }
+		.icon.min:hover { background-image: url('~img/icon/header/windows/min1.svg'); }
+		.icon.max:hover { background-image: url('~img/icon/header/windows/max1.svg'); }
+		.icon.close:hover { background-image: url('~img/icon/header/windows/close1.svg'); }
 	}
 	
 	.header { top: 30px !important; }
