--- a/src/scss/component/select.scss
+++ b/src/scss/component/select.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .select { 
-	border-radius: 4px; border: solid 1px #d2d0c2; display: inline-block; vertical-align: middle; @include text-small;
+	border-radius: 4px; border: solid 1px #d2d0c2; display: inline-block; vertical-align: middle;
 	letter-spacing: 0.08px; transition: $transitionFast; position: relative; cursor: pointer; font-family: 'Inter';
 	white-space: nowrap;
 }
