--- a/src/scss/menu/dataview/calendar.scss
+++ b/src/scss/menu/dataview/calendar.scss
@@ -5,14 +5,18 @@
 	.menu.menuDataviewCalendar {
 		.inner { user-select: none; }
 
+		.head { padding: 8px 16px 0px 16px; border-bottom: 1px solid #eae9e0; }
+		.body { padding: 8px 16px; }
+		.foot { padding: 11px 16px 3px 16px; border-top: 1px solid #eae9e0; }
+		.foot {
+			.btn { display: inline-block; vertical-align: top; margin-right: 16px; cursor: pointer; }
+			.btn:last-child { margin: 0px; }
+		}
+
 		.day { display: inline-block; vertical-align: top; width: 28px; height: 28px; line-height: 28px; text-align: center; cursor: pointer; margin-right: 8px; }
 		.day:nth-child(7n + 7) { margin: 0px; }
 		.day:hover { background: rgba(172,169,150,0.15); }
 
-		.head { padding: 8px 16px 0px 16px; border-bottom: 1px solid #eae9e0; }
-		.body { padding: 8px 16px; }
-		.foot { padding: 8px 16px; border-top: 1px solid #eae9e0; }
-		
 		.day.th { color: $colorDarkGrey; cursor: default; }
 		.day.th:hover { background: none; font-weight: 400; }
 		
