#710: removed confirm button

--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -7,7 +7,7 @@
 	
 		.icon { transition: none; }
 		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; margin-bottom: 18px; }
-		.inputs, .pin { margin-bottom: 32px; }
+		.inputs { margin-bottom: 32px; }
 		
 		.head { 
 			position: absolute; left: 0px; top: 0px; width: 100%; height: 40px; padding: 10px 12px; background: #fff; z-index: 1;
