--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -26,14 +26,11 @@
 
 			.cellContent { @include text-overflow-nw; width: 100%; }
 				
-			td.cell { 
-				padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; 
-			}
+			td.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
 			td.cell:last-child { border-right: 0px; }
 			td.cell.last { width: auto; }
-
-			td.cell.c-number {
-				.name { @include text-overflow-nw; max-width: 100%; }
+			td.cell {
+				.name { @include text-overflow-nw; }
 			}
 
 			td.cell.add { color: $colorDarkGrey; transition: $transitionFast; cursor: pointer; line-height: 20px; }
