--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -36,7 +36,7 @@
 			td.cell.add { color: $colorDarkGrey; transition: $transitionFast; cursor: pointer; line-height: 20px; }
 			td.cell.add {
 				 .icon { vertical-align: top; margin: 0px 4px 0px 0px; }
-				 .name { vertical-align: top; display: inline-block; line-height: 20px; height: 20px; vertical-align: top; }
+				 .name { vertical-align: top; display: inline-block; line-height: 20px; height: 20px; vertical-align: top; width: calc(100% - 24px) }
 			}
 			td.cell.add:hover { color: $colorBlack; }
 			td.cell.add:hover {
