--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -51,6 +51,10 @@
 		.icon.history { background-image: url('~img/icon/menu/action/history0.svg'); }
 		.icon.search { background-image: url('~img/icon/menu/action/search0.svg'); }
 		.icon.create { background-image: url('~img/icon/menu/action/create0.svg'); }
+
+		.icon.page { background-image: url('~img/icon/menu/action/object/page0.svg'); }
+		.icon.contact { background-image: url('~img/icon/menu/action/object/contact0.svg'); }
+		.icon.task { background-image: url('~img/icon/menu/action/object/task0.svg'); }
 		
 		.icon.align.left { background-image: url('~img/icon/menu/align/left.svg'); }
 		.icon.align.center { background-image: url('~img/icon/menu/align/center.svg'); }
