--- a/src/scss/popup/confirm.scss
+++ b/src/scss/popup/confirm.scss
@@ -2,10 +2,10 @@
 
 .popups {
 	.popup.popupConfirm {
-		.innerWrap { width: 672px; padding: 32px 48px 48px 48px; }
+		.innerWrap { width: 672px; padding: 32px 48px 40px 48px; }
 		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.48px; margin-bottom: 16px; }
 		.label { margin-bottom: 26px; }
-		.button { height: 32px; line-height: 32px; margin-right: 10px; }
+		.button { margin-right: 16px; }
 		.button.last-child { margin: 0px; }
 
 		.smile { margin-bottom: 12px; }
