--- a/src/scss/menu/dataview/object.scss
+++ b/src/scss/menu/dataview/object.scss
@@ -3,6 +3,7 @@
 .menus {
 	.menu.menuDataviewObjectType { width: 224px; }
 	.menu.menuDataviewObjectType {
+		.content { padding-bottom: 11px; }
 		.wrap { padding: 0px 16px 8px 16px; }
 		.line { height: 1px; margin: 8px 0px; background: $colorLightGrey; }
 		.input { border: 1px solid $colorLightGrey; padding: 0px 8px; }
