--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -3,6 +3,8 @@
 .menus {
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 102; background: rgba(0,0,0,0); }
 	#menu-polygon { z-index: 1000; position: absolute; }
+
+	.menu * { user-select: none; }
 	
 	.menu { 
 		border-radius: 8px; color: $colorBlack; position: absolute; z-index: 103; text-align: left; 
