--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -54,7 +54,7 @@
             td.cell.isEditing {
                 .input-text { padding: 0px; height: 20px; }
 				.textarea { 
-					padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; 
+					padding: 0px; background: none; padding: 14px; box-shadow: 0px 0px 0px 2px $colorOrange inset; overflow: auto; font-family: 'Inter';
 					position: absolute; left: 0px; top: 0px; height: auto; width: 100%; background: #fff; z-index: 1;
 				}
             }
