--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -63,7 +63,7 @@
 					}
 				}
 
-				.item.active { background: none; border-color: $colorOrange !important; box-shadow: 0px 0px 0px 1px $colorOrange; }
+				.item.active { background: none; border-color: $colorOrange !important; box-shadow: 0px 0px 0px 1px $colorOrange inset; }
 				.item.active {
 					.icon.arrow { background-image: url('~img/arrow/nav1.svg'); }
 					.smile { background: #f7f5f0; }
